[tool.poetry]
name = "pycon-kr2021-sample-sqlalchemy"
version = "0.1.0"
description = ""
authors = ["Joongi Kim <me@daybreaker.info>"]

[tool.poetry.dependencies]
python = "^3.9"
asyncpg = "^0.23.0"
SQLAlchemy = {extras = ["asyncio", "asyncpg"], version = "^1.4.23"}
greenlet = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
